Use overnight server, base data store added and add user implemented

--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -11,6 +11,6 @@
     "experimentalDecorators": true,
     "strict": true,
     "strictNullChecks": true,
-    "noImplicitAny": true
+    "noImplicitAny": true,
   }
 }
