--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
   },
   "dependencies": {
     "@overnightjs/core": "^1.7.5",
+    "@types/uuid": "^8.3.0",
     "express": "^4.17.1",
+    "http-status-codes": "^2.1.4",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "uuid": "^3.4.0"
   }
 }
