--- a/package.json
+++ b/package.json
@@ -12,14 +12,22 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/node": "^15.3.1",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
+    "@types/uuid": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "cross-spawn": "^7.0.3",
     "css-loader": "^5.2.5",
     "dart-sass": "^1.25.0",
+    "eslint": "^7.27.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-webpack-plugin": "^2.5.4",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
     "sass": "^1.34.0",
@@ -33,7 +41,7 @@
   },
   "dependencies": {
     "@overnightjs/core": "^1.7.5",
-    "@types/uuid": "^8.3.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "http-status-codes": "^2.1.4",
     "react": "^17.0.2",
