--- a/tsconfig.client.json
+++ b/tsconfig.client.json
@@ -4,6 +4,7 @@
     "module": "es6",
     "target": "es5",
     "jsx": "react",
+    "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
