--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "http-status-codes": "^2.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "redux": "^4.1.0",
     "uuid": "^3.4.0"
   }
 }
