--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^15.3.1",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
+    "@types/react-router-dom": "^5.1.7",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.24.0",
     "@typescript-eslint/parser": "^4.24.0",
@@ -47,6 +48,7 @@
     "http-status-codes": "^2.1.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
     "uuid": "^3.4.0"
   }
