--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "http-status-codes": "^2.1.4",
     "immutable": "^4.0.0-rc.12",
     "react": "^17.0.2",
+    "react-contenteditable": "^3.3.5",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
